--- a/LlamitraApi/appsettings.json
+++ b/LlamitraApi/appsettings.json
@@ -14,7 +14,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"ConnectionDefault": "Data Source=RODRIGO\\SQLEXPRESS03; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
-    "ConnectionDefault": "Data Source=DESKTOP-1J0NNT1\\SQLEXPRESS01; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+    //"ConnectionDefault": "Data Source=DESKTOP-1J0NNT1\\SQLEXPRESS01; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true",
+    "ConnectionDefault": "Data Source=DESKTOP-IDSIOQB; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
   },
   "settings": {
 
