--- a/LlamitraApi/appsettings.json
+++ b/LlamitraApi/appsettings.json
@@ -24,5 +24,9 @@
   },
   "JwtSettings": {
     "Key": "=Llam1tra_Apiiwadiadiadiawdawd=1584!!!"
+  },
+  "MercadoPago": {
+    "AccessToken": "TEST-6697842238041214-111220-e8e33574ca3822b8643335e64973ee68-272464197",
+    "PublicKey": "TEST-1cdc02b0-e92a-41fd-8d8a-bf4d0a751eed"
   }
 }
