--- a/LlamitraApi/appsettings.json
+++ b/LlamitraApi/appsettings.json
@@ -12,11 +12,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //"ConnectionDefault": "Data Source=RODRIGO\\SQLEXPRESS03; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
-    //"ConnectionDefault": "Data Source=DESKTOP-1J0NNT1\\SQLEXPRESS01; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true",
-    "ConnectionDefault": "Data Source=DESKTOP-IDSIOQB; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
-  },
+    "ConnectionStrings": {
+        //"ConnectionDefault": "Data Source=RODRIGO\\SQLEXPRESS03; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+        //"ConnectionDefault": "Data Source=DESKTOP-1J0NNT1\\SQLEXPRESS01; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true",
+        "ConnectionDefault": "Data Source=localhost\\SQLEXPRESS; Initial Catalog=ProyectoIL; Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+    },
   "settings": {
 
     "secretKey": "=Codig0Estudiant3="
